--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@mui/material": "^7.0.1",
     "@mui/x-date-pickers": "^7.28.3",
     "dayjs": "^1.11.13",
+    "mapbox-gl": "^2.14.1",
     "next": "^14",
     "react": "^18",
     "react-countup": "^6.5.3",
     "react-dom": "^18",
+    "react-map-gl": "^7.0.23",
     "swiper": "^11.2.6"
   },
   "devDependencies": {
