--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@mui/material": "^7.0.1",
     "@mui/x-date-pickers": "^7.28.3",
     "dayjs": "^1.11.13",
+    "echarts": "^5.6.0",
+    "echarts-for-react": "^3.0.2",
     "mapbox-gl": "^2.14.1",
     "next": "^14",
     "react": "^18",
